# IoC-pattern-in-C-

./: CMakeLists.txt  README.md
include/: Examination.h  ExaminationMapper.h  IDB.h  Patient.h  PatientMapper.h  Treatment.h  TreatmentMapper.h
src/: Examination.cpp  ExaminationMapper.cpp  Patient.cpp  PatientMapper.cpp  Treatment.cpp  TreatmentMapper.cpp  main.cpp
